fix wordbreak in footnotes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,3 +61,7 @@ p+p {
 #index article h2{
   line-height: 1.5rem;
 }
+
+.footnotes{
+  word-break: break-all;
+}
